# object_with_region

./: CMakeLists.txt  README.md  package.xml
include/object_with_region/: object_with_region.hpp
launch/: default.launch.py
msg/: ObjectRegion3D.msg  ObjectRegion3DArray.msg
params/: params.yaml
src/: main.cpp  object_with_region.cpp
